# pypi

./: README.md  __init__.py  main.py  project_configure.json  pyproject.toml  setup.py
complete/fig/: pypi.ts
complete/zsh/: _pypi
pypi/: __config__.py  __init__.py  main.py
