[tool.poetry]
name = "pypi"
version = "0.0.7"
description = "A pypi auto scripts for Qpro*Template"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Qpro = "^0.12.1"

[tool.poetry.scripts]
pypi = "pypi.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
