[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pypi"
version = "0.0.7"
description = "A pypi auto scripts for Qpro*Template"
authors = [ "Rhythmicc <rhythmlian.cn@gmail.com>",]
license = "MIT"
readme = "README.md"

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/opt/homebrew/lib/python3.10/site-packages/"

[tool.poetry.dependencies]
python = "^3.7"
Qpro = "^0.12.1"

[tool.poetry.scripts]
pypi = "pypi.main:main"

[tool.qpro.config]
build = ""
entry_point = "pypi/main.py"
executable = "python3 -m pypi.main"
input_file = ""
template_root = ""
enable_complete = true
